--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Aposs</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="home">Home</string>
+    <string name="home">HOME</string>
     <string name="favorite">Favorite</string>
     <string name="cart">Cart</string>
     <string name="message">Message</string>
     <string name="person">Person</string>
+    <string name="seach">Seach</string>
+    <string name="about_us">About us</string>
 </resources>
