fix some warning

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="cart">Cart</string>
     <string name="message">Message</string>
     <string name="person">Person</string>
-    <string name="seach">Seach</string>
+    <string name="search">Search</string>
     <string name="about_us">About us</string>
+    <string name="image">image</string>
+    <string name="default_price">50.000đ</string>
 </resources>
