--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="about_us">About us</string>
     <string name="image">image</string>
     <string name="default_price">50.000đ</string>
+    <string name="purchase">1080 purchased</string>
 </resources>
