--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="categories">Categories</string>
     <string name="show_all">Show all</string>
     <string name="products">1257 products</string>
+    <string name="ranking">Ranking</string>
 </resources>
