--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="about_us">About us</string>
     <string name="image">image</string>
     <string name="default_price">50.000đ</string>
-    <string name="purchase">%s purchased</string>
+    <string name="purchase">550 purchased</string>
     <string name="categories">Categories</string>
     <string name="show_all">Show all</string>
     <string name="products">1257 products</string>
