--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="show_all">Show all</string>
     <string name="products">1257 products</string>
     <string name="type_here">Type message here</string>
+    <string name="contact">Feel free to contact us now</string>
 </resources>
