--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="more">More</string>
     <string name="type_here">Type message here</string>
     <string name="contact">Feel free to contact us now</string>
+    <string name="cart_empty">Nothing to check out You may like to take a look in our categories</string>
+    <string name="cart_empty_1">Nothing to check out</string>
+    <string name="cart_empty_2">You may like to take a look in our</string>
 </resources>
