--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="cart_empty">Nothing to check out You may like to take a look in our categories</string>
     <string name="cart_empty_1">Nothing to check out</string>
     <string name="cart_empty_2">You may like to take a look in our</string>
+    <string name="account">Account</string>
 </resources>
