--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="cart_empty_1">Nothing to check out</string>
     <string name="cart_empty_2">You may like to take a look in our</string>
     <string name="account">Account</string>
+    <string name="defaultCartNumber">1</string>
 </resources>
