--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="image">image</string>
     <string name="default_price">50.000đ</string>
     <string name="purchase">550 purchased</string>
-    <string name="categories">Categories</string>
+    <string name="Category">Categories</string>
     <string name="show_all">Show all</string>
     <string name="products">1257 products</string>
     <string name="ranking">Ranking</string>
@@ -38,6 +38,7 @@
     <string name="all">All</string>
     <string name="cancel">Cancel</string>
     <string name="amount">Amount:</string>
+    <string name="categories">Categories</string>
 
     <string-array name="filter">
         <item>ALL</item>
