--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,17 @@
         <item>1 star</item>
     </string-array>
     <string name="my_details">My details</string>
+    <string name="slogan">Shopping for free</string>
+    <string name="do_not_have_account">Don\'t have an account?</string>
+    <string name="sign_up">Sign up</string>
+    <string name="sign_in">Sign in</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="or_sign_in_with">Or Sign In with</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="or_sign_up_with">Or Sign Up with</string>
+    <string name="full_name">Full name</string>
+    <string name="cell_number">Cell Number</string>
+    <string name="confirm_password">Confirm Password</string>
 </resources>
