--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="notify_time">7:17 10/10/2021</string>
     <string name="see_now">See now</string>
     <string name="notification">Notification</string>
+    <string name="my_orders">My orders</string>
 </resources>
