--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,8 +64,8 @@
     <string name="your_account_has_been_verified_successfully">Your Account \nHas Been Verified Successfully</string>
     <string name="please_verify">Please verify</string>
     <string name="your">your</string>
-    <string name="cell_number">Cell Number</string>
-    <string name="verify_content_text">Please enter the 4 digit verification\nCode sent to your cell number</string>
+    <string name="cell_number">Cell number</string>
+    <string name="verify_content_text">Please click active in the email\nsent to your register email</string>
     <string name="via_sms_message">via SMS message or</string>
     <string name="change">
         <u>
@@ -75,7 +75,7 @@
     <string name="your_number">your number.</string>
     <string name="resend_otp">
         <u>
-            Resend OTP
+            Resend active email
         </u>
     </string>
     <string name="notify_time">7:17 10/10/2021</string>
