--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,5 @@
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="submit">Submit</string>
+    <string name="check_out">Check out</string>
 </resources>
