fix feature category and kind

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="sort_by">Sort by:</string>
+    <string name="purchased">Purchased</string>
+    <string name="product">Product</string>
 </resources>
