--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,5 @@
     <string name="sort_by">Sort by:</string>
     <string name="purchased">Purchased</string>
     <string name="product">Product</string>
+    <string name="confirm">Confirm</string>
 </resources>
