--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Aposs</string>
+    <string name="app_name">Fenshui House</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">HOME</string>
     <string name="favorite">Favorite</string>
@@ -49,7 +49,7 @@
         <item>1 star</item>
     </string-array>
     <string name="my_details">My details</string>
-    <string name="slogan">Shopping for free</string>
+    <string name="slogan">Grasp destiny, explore heaven\'s plan</string>
     <string name="do_not_have_account">Don\'t have an account?</string>
     <string name="sign_up">Sign up</string>
     <string name="sign_in">Sign in</string>
